<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/navigation_menu_home" />

        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/courses_icon"
            android:title="@string/navigation_menu_dashboard" />

        <item
            android:id="@+id/nav_evaluation"
            android:icon="@drawable/evaluation_icon"
            android:title="@string/navigation_menu_evaluation" />
    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/navigation_menu_login" />

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/navigation_menu_profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/navigation_menu_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/navigation_menu_communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="Share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="Rate Us" />
        </menu>
    </item>
</menu>